<resources>
    <string name="app_name">AllRide Customers</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">%1$s</string>
    <string name="nav_header_subtitle">%2$s</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="welcomeMsg">Welcome Back!</string>
    <string name="google_maps_key">PRIVATE FOR SECURITY REASONS</string>
    <string name="where_to">Where to?</string>
    <string name="request_driver">Request a driver</string>
    <string name="pick_driver">Pick from drivers</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="end_ride">End Ride</string>
    <string name="switch_ip">http://192.168.43.52:8080/</string>
</resources>
