<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeMsg"
            android:fontFamily="@font/uber_move_bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                tools:ignore="Suspicious0dp"/>


            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_add_24"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ride_selection_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/pick_driver_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_driver"
                android:backgroundTint="@color/gray"
                android:visibility="gone"/>

            <View
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/request_driver_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/request_driver"
                android:backgroundTint="@color/gray"
                android:visibility="gone"/>
            <Button
                android:id="@+id/end_ride_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_ride"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:visibility="gone"/>
            <View
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/cancel_ride_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_ride"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
